yamls/basic-ingress/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: application-web-ui
spec:
  # tls:
  #   - secretName: poc-wu-tls
  #     hosts:
  #       - poc.wu
  rules:
    - host: poc.wu
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend-crud
              servicePort: 80
          - path: /sonar
            backend:
              serviceName: sonar
              servicePort: 80
