yamls/basic-ingress/kibana_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-web-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  # tls:
  #   - secretName: poc-wu-tls
  #     hosts:
  #       - poc.wu
  rules:
    - host: kibana.wu
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana
              servicePort: 5601
