yamls/basic-ingress/kube_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-dashboard-web-ui
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  # tls:
  #   - secretName: poc-wu-tls
  #     hosts:
  #       - poc.wu
  rules:
    - host: kube-dash.wu
      http:
        paths:
          - path: /
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 80
