yamls/basic-ingress/sonarqube_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarqube-web-ui
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  # tls:
  #   - secretName: poc-wu-tls
  #     hosts:
  #       - poc.wu
  rules:
    - host: sonarqube.wu
      http:
        paths:
          - path: /
            backend:
              serviceName: sonar
              servicePort: 80
